--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <li><a href="#about">About Me</a></li>
             <li><a href="#portfolio">Experiences</a></li>
             <li><a href="#services">Skills</a></li>
-            <li><a href="#now_what">Now What</a></li>
+           <!---<li><a href="#courses">Courses</a></li>-->
+            <li><a href="#now_what">Future Plans</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
     </nav>
@@ -60,7 +61,7 @@
         <img src="pic2.JPEG" alt="">
         <div id="intro">
             <h2>I am Aelita Salikhova, an <span>Undergraduate Biomedical Engineering student</span></h2>
-            <p>Howdy,<br><br>I am so happy to see you on my website! Let me tell you a little bit about myself ... I am currently a junior at Texas A&M University
+            <p>Howdy,<br><br>I am so happy to see you on my website! Let me tell you a little bit about myself ... I am currently a senior at Texas A&M University
             studying Biomedical Engineering with minors in Mathematics and Material Science and Engineering. I am a part of the University Honors
             and a member in the Corps of Cadets and Biomedical Engineering Society. Additionally, I am an undergraduate research assistant for Dr. Raghavan's Lab.
             </p>
@@ -113,7 +114,7 @@
             <img src="corps4.JPEG" alt="">
             <img src="corps5.JPEG" alt="">
             <img src="corps6.JPEG" alt="">
-            <img src="corps7.JPG" alt="">
+            <img src="corps7.jpg" alt="">
         </div>
     </section>
 
@@ -147,8 +148,26 @@
         </div>
     </section>
 
+    <section id="courses">
+        <h1 class="headings">LASTLY</h1>
+    </section>
+
     <section id="now_what">
-        <h1 class="headings">NOW WHAT</h1>
+        <h1 class="headings">FUTURE PLANS</h1>
+            <div id="pic">
+                <img src="me.JPG" alt="" class="float-right">
+                <div id="outro">
+                    <h2>My next step is getting my <span>Master of Engineering</span></h2>
+                    <p>Howdy,<br><br> I have just applied for Texas A&M's Fast Track program. If I get in, then I would be able to take graduate level courses during my senior year. This means that I will only need
+                        to take a couple more credits when I get into the Masters program! After that I am planning on going into the industry field with biomedical engineering devices.
+                    </p><br><br>
+                    <p>Thank you for checking out my website! Please, contact me if you have any more questions!</p>
+                    <br><br>
+                    <p>Sincerely,</p><br>
+                    <h1>Aelita Salikhova</h1>
+                </div>
+            </div>
+
     </section>
 
     <section id="contact">
@@ -166,7 +185,6 @@
             Email.send({
                 Host : "smtp.yahoo.com",
                 Username : "aelitasalikh@yahoo.com",
-                Password : ,
                 To : 'aelitasalikh@yahoo.com',
                 From : document.getElementById("email").value,
                 Subject : "New Contact Form Inquiry",
